# InfinitumBotty

./: .gitignore  AdaptHanWordsFromLegacy.py  CODE_OF_CONDUCT.md  Main.py  README.md  ReadInternationalization.py  Test_UserProvider.py  comics.py  essen.py  extras.py  faust-bot-run.sh  getraenke.py  getraenkeOnlyGoodOnes.py  httpget.py  icecreamlist.py  kekse.py  nix-bot-run.sh  pyproject.toml  requirements.txt  shell.nix  snacks.py  thema.py
FaustBot/: FaustBot.py
FaustBot/Communication/: Connection.py  DebugPrint.py  JoinObservable.py  KickObservable.py  LeaveObservable.py  MagicNumberObservable.py  NickChangeObservable.py  NoticeObservable.py  Observable.py  PingObservable.py  PongObservable.py  PrivmsgObservable.py  __init__.py
FaustBot/Model/: Commands.py  Config.py  DuckProvider.py  GlossaryProvider.py  GoodQuotesProvider.py  HanDatabaseProvider.py  Introduction.py  ScoreProvider.py  UserProvider.py  i18n.py
FaustBot/Modules/: ActivityObserver.py  AllSeenObserver.py  AntiSpamObserver.py  BaseObserver.py  BastelObserver.py  BlockObserver.py  ComicObserver.py  ComicScraper.py  CommandsObserver.py  ConvertObserver.py  DiceObserver.py  DuckObserver.py  FortuneObserver.py  GiveCookieObserver.py  GiveDrinkObserver.py  GiveDrinkToObserver.py  GiveIceObserver.py  GoogleObserver.py  Greeter.py  HangmanObserver.py  HelpObserver.py  HilfeObserver.py  ICD11Observer.py  IdentNickServObserver.py  IntroductionObserver.py  JoinObserverPrototype.py  JokeObserver.py  KickObserverPrototype.py  (+32 more)
faustbot/: FaustBot.py  StringBuffer.py  __init__.py
python/: requirements.txt
(+334 files in other folders)
